refactor: update pagination sorting and improve method readability in product services